2010-06-22  Helmut Eller  <heller@common-lisp.net>

	* swank-loader.lisp (*architecture-features*): ECL uses :x86_64.

2010-06-18  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-current-tlf-number,slime-current-form-path):
	Moved to contrib/slime-parse.el.

2010-06-18  Helmut Eller  <heller@common-lisp.net>

	Don't use goto-line.

	* slime.el (slime-goto-line): New function as replacement without
	goto-line's cruft that we don't want.

2010-06-04  Helmut Eller  <heller@common-lisp.net>

	* slime.el, swank.lisp: #'(lambda -> (lambda

2010-06-04 Stelian Ionescu <sionescu@cddr.org>

	* swank.lisp: Move definition of LCONS before first use.

2010-06-04  Helmut Eller  <heller@common-lisp.net>

	* swank-allegro.lisp (socket-fd): Add support for allegro.

2010-06-04  Helmut Eller  <heller@common-lisp.net>

	Some *sldb-quit-restart* related fixes.

	* swank.lisp (*sldb-quit-restart*): Set to nil by default.
	(throw-to-toplevel, debug-in-emacs): Get rid of boundp tests.
	(format-restarts-for-emacs): Add a mark for *sldb-quit-restart*.
	(handle-requests): Always bind *emacs-connection*.
	(with-connection): Get rid of call-with-connection so that
	compilers can remove the call frame more easily.
	(repl-input-stream-read): Factored out from
	make-repl-input-stream.  Bind a *sldb-quit-restart* here too; no
	need to restart the repl and a extra prompt for errors in Emacs
	requests.

2010-05-28  Helmut Eller  <heller@common-lisp.net>

	Fix last change.

	* slime.el (define-slime-contrib): Fix names.
	Remove provide; makes no sense to call provide before file is
	completely loaded.

2010-05-28  Helmut Eller  <heller@common-lisp.net>

	* slime.el (define-slime-contrib): Use destructuring-bind.

2010-05-28  Helmut Eller  <heller@common-lisp.net>

	Move some var-defs before first use.

	* slime.el (slime-show-xref-buffer, slime-read-connection)
	(slime-thread-index-to-id):

2010-05-28  Helmut Eller  <heller@common-lisp.net>

	Move wacky parsing code to contrib.
